# kgdb

./: pyproject.toml  run_test.py
kgdb/config/: config.py
kgdb/modules/: entity_search.py
kgdb/resources/: db_elasticsearch.py
kgdb/resources/db/: db_core.py  db_dbpedia.py  db_deletes.py  db_entity_labels.py  db_lmdb.py  db_rocks.py  db_wikidata.py  db_wikipedia.py  utils.py
kgdb/resources/remove/: db_wikidata.old.py
kgdb/utils/: benchmark.py  dbpedia_download.sh  downloader.py  io_worker.py  similarities.py  utils.py
tests/: test_dbpedia.py  test_kgdb.py  test_wikidata.py  test_wikipedia.py
